--- a/admin/exportdados.html
+++ b/admin/exportdados.html
@@ -109,7 +109,7 @@
                             <p>Seu download somente dados e informações que você compartilhou ou que estão relacionadas a sua conta.</p>
                             <p>Ao concluir o download, entre em seu dispositivo eletrônico, onde você deseja fazer a importação de dados, e selecione o arquivo logo abaixo.</p>
                             <div>
-                                <input type="file" accept="json/*" onchange="importnewdatabase()" name="importfiles" id="upload">
+                                <input type="file" onchange="importnewdatabase()" name="importfiles" id="upload">
                                 <br>
         
                             </div>
