--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <section class='container'>
         <div class="pc-slider">
-            <img onclick="window.open('novidades.html')" src="imgs/banner-diadosnamorados.webp"/>
+            
             <img onclick="window.open('novidades.html')" src="imgs/banner-noviades.png"/>
             <img onclick="window.open('promocoes.html')" src="imgs/banner-promocoes.png"/>
             <img onclick="window.open(`https://api.whatsapp.com/send/?phone=5535997394181&text&type=phone_number&app_absent=0`)" src="imgs/pedidos-personalizados.png"/>    
@@ -109,7 +109,7 @@
 
     <section class='container'>
         <div class="cell-slider">
-            <a href="novidades.html"><img src="imgs/banner-diadosnamorados-cell.webp"/></a>
+
             <a href="novidades.html"><img src="imgs/banner-noviades-1.png"/></a>
             <a href="promocoes.html"><img src="imgs/banner-promocoes-cell.png"/></a>
             <a href="https://api.whatsapp.com/send/?phone=5535997394181&text&type=phone_number&app_absent=0"><img src="imgs/pedidos-personalizados-cell.png"/>  </a>
@@ -229,12 +229,12 @@
 
     <section>
         <div class='estoque-prata-index'>
-            <a href="prata/colar-veneziana.html">
+            <a href="prata/anel-solitario-pink.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar veneziana (1).jpeg" alt="">
+                    <img src="./imgs/Anel-solitário-pink-_1_.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Colar Veneziana</h1>
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Anel Solitário Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
@@ -274,12 +274,12 @@
 
 
         <div class='estoque-prata-index-pc'>
-            <a href="prata/colar-veneziana.html">
+            <a href="prata/anel-solitario-pink.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar veneziana (1).jpeg" alt="">
+                    <img src="./imgs/Anel-solitário-pink-_1_.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Colar Veneziana</h1>
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Anel Solitário Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
