--- a/pratas-colares.html
+++ b/pratas-colares.html
@@ -245,26 +245,6 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/colar-veneziana.html">
-                <div class='item-prata'>
-                    <img src="./imgs/colar veneziana (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Colar Veneziana</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 60,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
             <a href="prata/colar-elos-de-coracao.html">
                 <div class='item-prata'>
                     <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
@@ -276,6 +256,26 @@
                         </div>
                         <div class="promocao">
                             <p class="preço-loja">R$ 100,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/colar-veneziana.html">
+                <div class='item-prata'>
+                    <img src="./imgs/colar veneziana (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Colar Veneziana</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 60,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
