--- a/admin/exportdados.html
+++ b/admin/exportdados.html
@@ -84,11 +84,11 @@
                     </div>
                     <div class="contashowdados">
                         <p>Olá,</p>
-                        <h1>username!</h1>
+                        <h1>$username</h1>
                     </div>
                 </div>     
                 <div class="titleoption">
-                    <h2>Dados pessoais</h2>
+                    <h2>Exportar dados</h2>
                 </div>  
             </div> 
             <div class="contentinsidesettings">
