--- a/admin/exportdados.html
+++ b/admin/exportdados.html
@@ -80,7 +80,7 @@
             <div class="topsettings">
                 <div class="contashow">
                     <div class="contashowimage">
-                        <img src="img/usuario-sem-foto.png" alt="">
+                        <img src="" alt="">
                     </div>
                     <div class="contashowdados">
                         <p>Olá,</p>
