--- a/admin/login.html
+++ b/admin/login.html
@@ -49,7 +49,7 @@
 
         </div>
 
-        <div class="inputs-form">
+        <form class="inputs-form" data-netlify="true">
             <div class="ipt-form">
                 <label>Usuário</label><br>
                 <div class="iptinside">
@@ -65,7 +65,7 @@
                     <input type="password" id="senha" placeholder="Escreva sua senha" required>
                 </div>
             </div>
-        </div>
+        </form>
         <button class="buttonverify" onclick="verifylogin()">ENTRAR</button>
     </div>
     <script src="login.js"></script>
