--- a/admin/login.html
+++ b/admin/login.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </form>
-        <button class="buttonverify" onclick="verifylogin()">ENTRAR</button>
+        <button class="buttonverify" type="submit" onclick="verifylogin()">ENTRAR</button>
     </div>
     <script src="login.js"></script>
 </body>
