--- a/admin/login.html
+++ b/admin/login.html
@@ -49,7 +49,7 @@
 
         </div>
 
-        <form class="inputs-form" data-netlify="true">
+        <form class="inputs-form">
             <div class="ipt-form">
                 <label>Usuário</label><br>
                 <div class="iptinside">
