--- a/admin/exportdados.html
+++ b/admin/exportdados.html
@@ -108,8 +108,10 @@
                             </div>
                             <p>Seu download somente dados e informações que você compartilhou ou que estão relacionadas a sua conta.</p>
                             <p>Ao concluir o download, entre em seu dispositivo eletrônico, onde você deseja fazer a importação de dados, e selecione o arquivo logo abaixo.</p>
+                            <h1>Importação de dados</h1>
                             <div>
-                                <input type="file" onchange="importnewdatabase()" name="importfiles" id="upload">
+                                <p>Utilize essa opção para obter seus arquivos</p>
+                                <input class="inputbutton" type="file" onchange="importnewdatabase()" name="importfiles" id="upload">
                                 <br>
         
                             </div>
