--- a/admin/pedidospendentes.html
+++ b/admin/pedidospendentes.html
@@ -111,7 +111,7 @@
                                         <label for="pagamento">Pagamento</label>
                                         <select name="pagamento" id="pagamentoadd">
                                             <option value="Pendente">Pendente</option>
-                                            <option value="Pago por Pix">Pago</option>
+                                            <option value="Pago">Pago</option>
                                         </select>
                                     </div>
                                     <div class="divPrecoRevenda boxitempla">
