--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             <div class='item-prata'>
                 <img src="./imgs/brinco-com-veneziana-_1_.webp" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Brinco com Veneziana</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
@@ -629,11 +629,11 @@
                 </div>
             </div>
         </a>
-        <a href="prata/brinco-com-veneziana.html">
+        <<a href="prata/brinco-com-veneziana.html">
             <div class='item-prata'>
                 <img src="./imgs/brinco-com-veneziana-_1_.webp" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Brinco com Veneziana</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
