--- a/novidades.html
+++ b/novidades.html
@@ -393,7 +393,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Anel Coração Cravejado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
