--- a/pratas-aneis.html
+++ b/pratas-aneis.html
@@ -285,26 +285,7 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/anel-coracao-cravejado.html">
-                <div class='item-prata'>
-                    <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Anel Coração Cravejado</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 75,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
+
             <a href="prata/anel-quadrado.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel-quadrado (3).jpeg" alt="">
@@ -316,6 +297,26 @@
                         </div>
                         <div class="promocao">
                             <p class="preço-loja">R$ 50,50</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/anel-coracao-cravejado.html">
+                <div class='item-prata'>
+                    <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Anel Coração Cravejado</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 75,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
