--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/colar-ponto-de-luz-pink.html">
+            <a href="prata/brinco-circular.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
+                    <img src="./imgs/Brinco circular (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Brinco Circular</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 80,00</p>
+                            <p class="preço-loja">R$ 25,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -294,17 +294,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/colar-ponto-de-luz-pink.html">
+            <a href="prata/brinco-circular.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
+                    <img src="./imgs/Brinco circular (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
-                        <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Brinco Circular</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 80,00</p>
+                            <p class="preço-loja">R$ 25,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -314,17 +314,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/trio-rosa-claro.html">
+            <a href="prata/anel-cravejado.html">
                 <div class='item-prata'>
-                    <img src="./imgs/trio rosa claro (1).jpeg" alt="">
+                    <img src="./imgs/anel-cravejado-_1_.webp" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Trio Rosa Claro</h1>
+                        <h1 class="nome-prata">Anel Cravejado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 60,00</p>
+                            <p class="preço-loja">R$ 55,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -447,17 +447,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/trio-rosa-claro.html">
+        <a href="prata/anel-cravejado.html">
             <div class='item-prata'>
-                <img src="./imgs/trio rosa claro (1).jpeg" alt="">
+                <img src="./imgs/anel-cravejado-_1_.webp" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Trio Rosa Claro</h1>
+                    <h1 class="nome-prata">Anel Cravejado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 60,00</p>
+                        <p class="preço-loja">R$ 55,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -492,17 +492,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/trio-rosa-claro.html">
+        <a href="prata/anel-cravejado.html">
             <div class='item-prata'>
-                <img src="./imgs/trio rosa claro (1).jpeg" alt="">
+                <img src="./imgs/anel-cravejado-_1_.webp" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Trio Rosa Claro</h1>
+                    <h1 class="nome-prata">Anel Cravejado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 60,00</p>
+                        <p class="preço-loja">R$ 55,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
