--- a/novidades.html
+++ b/novidades.html
@@ -272,7 +272,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -514,7 +514,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/trio rosa claro (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Trio Rosa Claro</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
