--- a/prata/trio-rosa-claro.html
+++ b/prata/trio-rosa-claro.html
@@ -149,9 +149,9 @@
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/colares.html" target="_blank"><u>Guia de Tamanhos</u></a>
                     </div>
-                    <label onclick="trio_rosa_claro_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
-                    <label id='cart' onclick="trio_rosa_claro_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>
-                    <!--<label class="indisponivel" onclick="trio_rosa_claro_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>-->
+                    <!--<label onclick="trio_rosa_claro_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
+                    <label id='cart' onclick="trio_rosa_claro_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>-->
+                    <label class="indisponivel" onclick="trio_rosa_claro_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>
                     <p id='entregue'>Este produto é vendido e entregue pela <a href=''>LARI'S</a>.</p>
 
                     <p class="compartilhar">Compartilhe: <a href='https://api.whatsapp.com/send/?text=https://laris-acessorios.netlify.app/prata/trio-rosa-claro.html' target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a></p>
