--- a/pratas-aneis.html
+++ b/pratas-aneis.html
@@ -225,17 +225,17 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="prata/anel-solitario-pink.html">
+            <a href="prata/anel-coracao-cravejado.html">
                 <div class='item-prata'>
-                    <img src="./imgs/Anel-solitário-pink-_1_.webp" alt="">
+                    <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Anel Solitário Pink</h1>
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Anel Coração Cravejado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 60,00</p>
+                            <p class="preço-loja">R$ 75,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -306,17 +306,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/anel-coracao-cravejado.html">
+            <a href="prata/anel-solitario-pink.html">
                 <div class='item-prata'>
-                    <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
+                    <img src="./imgs/Anel-solitário-pink-_1_.webp" alt="">
                     <div class="text-prata">
                         <p class='esgotado-loja'>ESGOTADO</p>
-                        <h1 class="nome-prata">Anel Coração Cravejado</h1>
+                        <h1 class="nome-prata">Anel Solitário Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 75,00</p>
+                            <p class="preço-loja">R$ 60,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -326,6 +326,7 @@
                     </div>
                 </div>
             </a>
+
             <a href="prata/anel-trançado.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel-traçado (1).jpeg" alt="">
