--- a/pratas-colares.html
+++ b/pratas-colares.html
@@ -225,17 +225,17 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="prata/colar-elos-de-coracao.html">
+            <a href="prata/colar-veneziana.html">
                 <div class='item-prata'>
-                    <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
+                    <img src="./imgs/colar veneziana (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Colar Elos de Coração</h1>
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Colar Veneziana</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 100,00</p>
+                            <p class="preço-loja">R$ 60,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -249,7 +249,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                     <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -265,17 +265,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/colar-veneziana.html">
+            <a href="prata/colar-elos-de-coracao.html">
                 <div class='item-prata'>
-                    <img src="./imgs/colar veneziana (1).jpeg" alt="">
+                    <img src="./imgs/COLAR-ELOS-DE-CORAÇÃO.webp" alt="">
                     <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
-                        <h1 class="nome-prata">Colar Veneziana</h1>
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Colar Elos de Coração</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 60,00</p>
+                            <p class="preço-loja">R$ 100,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
