--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/brinco-circular.html">
+            <a href="prata/anel-entrelacado.html">
                 <div class='item-prata'>
-                    <img src="./imgs/Brinco circular (1).jpeg" alt="">
+                    <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Circular</h1>
+                        <h1 class="nome-prata">Brinco Entrelaçado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 25,00</p>
+                            <p class="preço-loja">R$ 60,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -296,17 +296,17 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/brinco-circular.html">
+            <a href="prata/anel-entrelacado.html">
                 <div class='item-prata'>
-                    <img src="./imgs/Brinco circular (1).jpeg" alt="">
+                    <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Circular</h1>
+                        <h1 class="nome-prata">Brinco Entrelaçado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
                         <div class="promocao">
-                            <p class="preço-loja">R$ 25,00</p>
+                            <p class="preço-loja">R$ 60,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
@@ -564,17 +564,17 @@
     </section>
 
     <div class='estoque-prata-index'>
-        <a href="prata/anel-coracao-cravejado.html">
+        <a href="prata/anel-entrelacado.html">
             <div class='item-prata'>
-                <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
+                <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Anel Coração Cravejado</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco Entrelaçado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 75,00</p>
+                        <p class="preço-loja">R$ 60,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -584,17 +584,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/colar-veneziana.html">
+        <a href="prata/brinco-ponto-de-luz-pink.html">
             <div class='item-prata'>
-                <img src="./imgs/colar veneziana (1).jpeg" alt="">
+                <img src="./imgs/BRINCO PONTO DE LUZ PINK (1).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Colar Veneziana</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco Ponto de Luz Pink</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 60,00</p>
+                        <p class="preço-loja">R$ 30,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -614,32 +614,12 @@
 
 
     <div class='estoque-prata-index-pc'>
-        <a href="prata/anel-coracao-cravejado.html">
+        <a href="prata/anel-entrelacado.html">
             <div class='item-prata'>
-                <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
+                <img src="./imgs/anel entrelaçado (1).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Anel Coração Cravejado</h1>
-                    <div class='estrelas'>
-                        <img src="imgs/Nenhuma estrela.png" alt="">
-                    </div>
-                    <div class="promocao">
-                        <p class="preço-loja">R$ 75,00</p>
-                        <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                    </div>
-                    <div class="botaocomprarprata">
-                        <label>VER DETALHES</label>
-                    </div>
-                     
-                </div>
-            </div>
-        </a>
-        <a href="prata/colar-veneziana.html">
-            <div class='item-prata'>
-                <img src="./imgs/colar veneziana (1).jpeg" alt="">
-                <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Colar Veneziana</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco Entrelaçado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
@@ -654,17 +634,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/colar-ponto-de-luz-pink.html">
+        <a href="prata/brinco-ponto-de-luz-pink.html">
             <div class='item-prata'>
-                <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
+                <img src="./imgs/BRINCO PONTO DE LUZ PINK (1).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco Ponto de Luz Pink</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 80,00</p>
+                        <p class="preço-loja">R$ 30,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -674,17 +654,37 @@
                 </div>
             </div>
         </a>
-        <a href="prata/brinco-earcuff-cristal.html">
+        <a href="prata/brinco-articulado.html">
             <div class='item-prata'>
-                <img src="./imgs/brinco-earcuff-cristal-_1_.webp" alt="">
+                <img src="./imgs/BRINCO ARTICULADO (1).jpeg" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Brinco Earcuff Cristal</h1>
+                    <h1 class="nome-prata">Brinco Articulado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 55,00</p>
+                        <p class="preço-loja">R$ 60,00</p>
+                        <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                    </div>
+                    <div class="botaocomprarprata">
+                        <label>VER DETALHES</label>
+                    </div>
+                     
+                </div>
+            </div>
+        </a>
+        <a href="prata/brinco-com-veneziana-cristal.html">
+            <div class='item-prata'>
+                <img src="./imgs/BRINCO COM VENEZIANA CRISTAL (1).jpeg" alt="">
+                <div class="text-prata">
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco com Veneziana Cristal</h1>
+                    <div class='estrelas'>
+                        <img src="imgs/Nenhuma estrela.png" alt="">
+                    </div>
+                    <div class="promocao">
+                        <p class="preço-loja">R$ 60,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
