--- a/pratas-pulseiras.html
+++ b/pratas-pulseiras.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="topcard">
                     <h1>PULSEIRAS</h1>
-                    <p>4 Produtos</p>
+                    <p>5 Produtos</p>
                 </div>
                 <div>
                     <p class='desccard'>A Prata de Lei também é conhecida pelos brasileiros como Prata 925. Ambas são ideais para a fabricação de joias e têm grau de pureza de 92,5%, respectivamente, o que garante a qualidade, o brilho e a durabilidade de uma joia em prata.<br>Fonte: pratafina.com.br</p>
@@ -225,6 +225,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/pulseira-nossa-senhora.html">
+                <div class='item-prata'>
+                    <img src="./imgs/PULSEIRA NOSSA SENHORA (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Pulseira Nossa Senhora</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 80,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/pulseira-detalhada.html">
                 <div class='item-prata'>
                     <img src="./imgs/Pulseira-Detalhada (2).jpeg" alt="">
