--- a/novidades.html
+++ b/novidades.html
@@ -192,7 +192,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/BRINCO PONTO DE LUZ PINK (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Brinco Ponto de Luz Pink</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
