--- a/pratas-brincos.html
+++ b/pratas-brincos.html
@@ -245,26 +245,7 @@
                     </div>
                 </div>
             </a>
-            <a href="prata/brinco-ponto-de-luz-pink.html">
-                <div class='item-prata'>
-                    <img src="./imgs/BRINCO PONTO DE LUZ PINK (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Ponto de Luz Pink</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 30,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
+
             <a href="prata/brinco-articulado.html">
                 <div class='item-prata'>
                     <img src="./imgs/BRINCO ARTICULADO (1).jpeg" alt="">
@@ -381,6 +362,26 @@
                         </div>
                         <div class="promocao">
                             <p class="preço-loja">R$45,00 -- R$ 55,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/brinco-ponto-de-luz-pink.html">
+                <div class='item-prata'>
+                    <img src="./imgs/BRINCO PONTO DE LUZ PINK (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Brinco Ponto de Luz Pink</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 30,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
